AA-2006-12-08-0: Cleanup:   arco_checktree fixes

JG-2006-12-08-0: Cleanup:   Removed globals and set_error from functional checks.

JG-2006-12-07-1: Bugfix:    Fixed error handling for setup/cleanup functions.
                            Compile timeout was too low for jgdi build.
                 Cleanup:   Removed globals and set_error from bugs/issuezilla
                            checks.

JG-2006-12-07-0: Bugfix:    Fixed a TCL error introduced by JG-2006-12-06-0.
                            Fixed installation of SGE 6.0, 6.0u1, 6.0u2, ...
                 Review:    RD

AA-2006-12-07-0: Cleanup:   arco jtestcase removal

JG-2006-12-06-0: Enhancem.: The set_error call is no longer needed.
                            Cleanup in testsuite framework starting checks.
                            Eliminate set_error from checks (step 1).
                 Issue:     10
                 Review:    RD

JG-2006-12-04-0: Bugfix:    Opening connections to windows hosts as non 
                            domain CHECK_USER was broken due to 
                            JG-2006-11-30-0.
                 Review:    HP

CR-2006-12-04-0: Enhancem.: Added test for "hostname resolving should not
                            be case sensitive"
                 Review:    RD

JG-2006-12-01-1: Enhancem.: Build libdrmaa.jar with SGE 6.0.
                 Issue:     73
                 Review:    RD

RD-2006-12-01-0: Enhancem:  Added test for qacct -l h=<hostname> dump core
                 Review:    JG

JG-2006-12-01-0: Bugfix:    qconf test failed if no "non_cluster_host" is 
                            available.
                            qrsh test failed on NetBSD and Interix.
                 Review:    RD

JG-2006-11-30-0: Bugfix:    - open_remote_spawn_process failed on some interix
                              version.
                            - commandline switch close_rlogin was broken
                 Enhancem.: sge.root propterty is no longer needed in 